welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: '}' expected but 'case' found.
case Color.Green => baisseBrosse; leveBrosse;
^SlugTracking:6: error: illegal start of definition
case _ => if (estFaceMur){recule();}
^SlugTracking:12: error: eof expected but '}' found.
}
^